run-script and minor fixes

--- a/src/AttendanceManagement.Blazor/App.razor
+++ b/src/AttendanceManagement.Blazor/App.razor
@@ -17,7 +17,7 @@
 
 <body class="abp-application-layout bg-light">
 
-    <script src="_framework/blazor.web.js"></script>
+    @* <script src="_framework/blazor.web.js"></script> *@
 
     <div id="ApplicationContainer">
         <div class="spinner">
