--- a/src/AttendanceManagement.Blazor/App.razor
+++ b/src/AttendanceManagement.Blazor/App.razor
@@ -9,6 +9,7 @@
 
     <link href="global.css" rel="stylesheet"/>
     <link href="main.css" rel="stylesheet"/>
+    <link href="custom.css" rel="stylesheet" />
     <link href="AttendanceManagement.Blazor.Client.styles.css" rel="stylesheet"/>
 
 
