--- a/src/AttendanceManagement.Blazor.Client/_Imports.razor
+++ b/src/AttendanceManagement.Blazor.Client/_Imports.razor
@@ -13,3 +13,23 @@
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
 @using Volo.Abp.BlazoriseUI.Components
+
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Blazorise.Components
+@using Volo.Abp.AspNetCore.Components
+@using Volo.Abp.AspNetCore.Components.Web.Theming
+@using Volo.Abp.AspNetCore.Components.Web.Theming.Layout
+@using Volo.Abp.AspNetCore.Components.Messages
+@using Volo.Abp.Application.Dtos
+@using Volo.Abp.Localization
+@using Microsoft.Extensions.Localization
+@using AttendanceManagement.Localization
+@using AttendanceManagement.Permissions
+@using AttendanceManagement.Dtos.Employees
+@using AttendanceManagement.Dtos.Group
+@using AttendanceManagement.Dtos.Schedules
+@using AttendanceManagement.Dtos.Workflows
+@using AttendanceManagement.Dtos.ExceptionRequests
+@using AttendanceManagement.Enums
