--- a/src/AttendanceManagement.Blazor/App.razor
+++ b/src/AttendanceManagement.Blazor/App.razor
@@ -9,8 +9,13 @@
 
     <link href="global.css" rel="stylesheet"/>
     <link href="main.css" rel="stylesheet"/>
+    @* bootstrap *@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    @* font awesome *@
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link href="custom.css" rel="stylesheet" />
     <link href="AttendanceManagement.Blazor.Client.styles.css" rel="stylesheet"/>
+    <script src="download-file.js"></script>
 
 
     <HeadOutlet @rendermode="new InteractiveWebAssemblyRenderMode(prerender: false)" />
