--- a/src/AttendanceManagement.HttpApi.Host/wwwroot/global-styles.css
+++ b/src/AttendanceManagement.HttpApi.Host/wwwroot/global-styles.css
@@ -3,4 +3,9 @@
 :root .lpx-brand-logo {
     --lpx-logo: url('/images/logo/ejada/ejada-thumbnail-blue.png');
     --lpx-logo-icon: url('/images/logo/ejada/ejada-thumbnail-blue.png');
+    --ejada-primary: #000f7d;
+}
+
+.lpx-language-selection .dropdown-toggle .lpx-icon {
+    color: var(--ejada-primary) !important;
 }
