--- a/src/AttendanceManagement.Blazor.Client/Pages/Schedules/Index.razor
+++ b/src/AttendanceManagement.Blazor.Client/Pages/Schedules/Index.razor
@@ -454,7 +454,7 @@
             StateHasChanged();
 
             var fileBytes = await ScheduleAppService.ExportToExcelAsync();
-            var fileName = $"Schedules_{DateTime.Now:yyyyMMdd_HHmmss}.xlsx";
+            var fileName = $"Schedules_{DateTime.UtcNow:yyyyMMdd_HHmmss}.xlsx";
             await JSRuntime.InvokeVoidAsync("downloadFile", fileName, Convert.ToBase64String(fileBytes));
 
             await MessageService.Success(L["SuccessfullyExported"]);
